--- a/src/pages/agua/agua.html
+++ b/src/pages/agua/agua.html
@@ -1,23 +1,25 @@
 <ion-header>
-
-   <ion-navbar color="agua">
-     <button ion-button menuToggle icon-only> <ion-icon name="menu"></ion-icon> </button>
+   <ion-navbar color="primary">
      <ion-title class="titulo">Calidad de Agua</ion-title>
    </ion-navbar>
-
 </ion-header>
 
 <ion-content padding class="menuAgua">
 
 	 <form #form="ngForm">
      <ion-item ion-col col-12 col-md-6 col-lg-4 offset-lg-8 color="itemLight">
-       <ion-label floating>ICA</ion-label>
-       <ion-input name="ica" type="number" min="0" max="1" required></ion-input>
+       <ion-label floating color="dark">Titulo</ion-label>
+       <ion-input name="titulo" type="text" [(ngModel)]="listAgua.titulo" required></ion-input>
+     </ion-item>
+
+     <ion-item ion-col col-12 col-md-6 col-lg-4 offset-lg-8 color="itemLight">
+       <ion-label floating color="dark">ICA</ion-label>
+       <ion-input name="ica" type="number" min="0" max="1" [(ngModel)]="listAgua.ica" required></ion-input>
      </ion-item>
    </form>
 
    <div class="actions">
-     <button margin-top ion-button color="secondary" (click)="save()">Finalizar</button>
+     <button margin-top ion-button color="secondary" round [disabled]="!form.valid" (click)="save()">Finalizar</button>
    </div>
 
 </ion-content>
