--- a/src/pages/forestal/forestal.html
+++ b/src/pages/forestal/forestal.html
@@ -1,31 +1,31 @@
 <ion-header>
-
-   <ion-navbar color="agua">
-     <button ion-button menuToggle icon-only> <ion-icon name="menu"></ion-icon> </button>
+   <ion-navbar color="primary">
      <ion-title class="titulo">Recurso Forestal</ion-title>
    </ion-navbar>
-
 </ion-header>
-
 
 <ion-content padding class="menuForestal">
    
    <form #form="ngForm">
-     <ion-item ion-col col-12 col-md-6 col-lg-4 offset-lg-8 color="itemLight">
-       <ion-label floating>Proporcion de superficie</ion-label>
-       <ion-input name="psbn" type="number" min="0" max="1" required></ion-input>
-     </ion-item>
-   </form>
 
-   <form #form="ngForm">
      <ion-item ion-col col-12 col-md-6 col-lg-4 offset-lg-8 color="itemLight">
-       <ion-label floating>Superficie del bosque</ion-label>
-       <ion-input name="scbn" type="number" min="0" max="1" required></ion-input>
+       <ion-label floating color="dark">Titulo</ion-label>
+       <ion-input name="titulo" type="text" [(ngModel)]="listForestal.titulo" required></ion-input>
+     </ion-item>
+
+     <ion-item ion-col col-12 col-md-6 col-lg-4 offset-lg-8 color="itemLight">
+       <ion-label floating color="dark">Superficie de bosque</ion-label>
+       <ion-input name="psbn" type="number" min="0" max="1" [(ngModel)]="listForestal.pcds" required></ion-input>
+     </ion-item>
+     
+     <ion-item ion-col col-12 col-md-6 col-lg-4 offset-lg-8 color="itemLight">
+       <ion-label floating color="dark">Superficie de referencia</ion-label>
+       <ion-input name="scbn" type="number" min="0" max="1" [(ngModel)]="listForestal.scdb" required></ion-input>
      </ion-item>
    </form>
 
    <div class="actions">
-     <button margin-top ion-button color="secondary" (click)="save()">Finalizar</button>
+     <button margin-top ion-button color="secondary" round [disabled]="!form.valid" (click)="save()">Finalizar</button>
    </div>
 
 
