--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,7 +1,12 @@
+<ion-header>
+   <ion-navbar color="primary">
+     <ion-title class="titulo">Registrar</ion-title>
+   </ion-navbar>
+</ion-header>
+
 <ion-content padding class="login-bg">
   <div class="login-main">
-
-    <h1 class="login-title" text-center>GRANT</h1>
+    <p class="text"><b>Por favor ingrese correo electrónico y contraseña igual o mayor a 6 caracteres</b></p>
     <div class="login-form">
       <ion-row>
         <ion-col col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8>
@@ -19,12 +24,9 @@
       </ion-row>
     </div>
     <ion-row>
-      <button ion-col col-6 col-md-3 offset-md-6 col-lg-2 offset-lg-8 ion-button clear round
-           (click)="registro()"><b>Registro</b>
+      <button ion-col col-6 col-md-3 offset-md-6 col-lg-2 offset-lg-8 ion-button round
+           (click)="registro(user)"><b>Guardar</b>
       </button>
-      <button ion-col col-6 col-md-3 col-lg-2 ion-button round 
-           (click)="login(user)" (click)="presentLoading()"><b>Entrar</b>
-       </button>
     </ion-row>
   </div>
 </ion-content>
