--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -20,7 +20,7 @@
     </div>
     <ion-row>
       <button ion-col col-6 col-md-3 offset-md-6 col-lg-2 offset-lg-8 ion-button clear round
-           (click)="registro()"><b>Registro</b>
+           (click)="registro()"><b style="color: white">Registro</b>
       </button>
       <button ion-col col-6 col-md-3 col-lg-2 ion-button round 
            (click)="login(user)" (click)="presentLoading()"><b>Entrar</b>
