--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -24,7 +24,7 @@
       </ion-row>
     </div>
     <ion-row>
-      <button ion-col col-6 col-md-3 offset-md-6 col-lg-2 offset-lg-8 ion-button round
+      <button ion-col col-6 offset-6 col-md-3 offset-md-6 col-lg-2 offset-lg-8 ion-button round
            (click)="registro(user)"><b>Guardar</b>
       </button>
     </ion-row>
