--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_9BhDX9czG57YVe0V6bzWZEqzDu2PSEQ"></script>
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
