--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,6 +10,8 @@
          <button menuClose ion-item (click)="setContent(2)"> <ion-icon name="md-filing" margin-right></ion-icon>Historial</button>
          <button menuClose ion-item (click)="setContent(3)"> 
                <ion-icon name="md-information-circle" margin-right></ion-icon>Informacion</button>
+         <button menuClose ion-item (click)="setContent(4)"> <ion-icon name="md-pin" margin-right></ion-icon>Ubicación</button>
+         
          <ion-list-header><b>Salir</b></ion-list-header>
          <button menuClose ion-item outline (click)="logout()"><ion-icon name="md-exit" margin-right></ion-icon>Cerrar sesión</button>
          <button ion-item> {{usuario}} </button>
