--- a/src/pages/mapa/mapa.html
+++ b/src/pages/mapa/mapa.html
@@ -1,6 +1,6 @@
 <ion-header>
    <ion-navbar color="primary">
-     <ion-title class="titulo">Mapa</ion-title>
+     <ion-title class="titulo">Ubicación</ion-title>
    </ion-navbar>
 </ion-header>
 
